--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,13 @@
-<htmL>
-  <head>
-    <title> Vetalya's blog </title>
-  </head>
-  <body>
-    <div>
-      <h1><a href="/">Vetalya's Blog</a></h1>
-    </div>
+{% extends 'blog/base.html' %}
 
-    <div>
-      <p>published: 08.02.2020, 17:42</p>
-      <h2><a href="/">My first post</a></h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus. Libero volutpat sed cras ornare.</p>
-    </div>
-
-    <div>
-      <p>published: 08.02.2020, 17:44</p>
-      <h2><a href="/">My second post</a></h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus. Libero volutpat sed cras ornare.</p>
-    </div>
-  </body>
-</html>
+{% block content %}
+  {% for post in posts %}
+        <div class="post">
+            <div class="date">
+              <p class="pub">Опубликовано: {{ post.published_date }}</p>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p class="ttt">{{ post.text|linebreaksbr }}</p>
+          </div>
+  {% endfor %}
+{% endblock %}
